# WIFI-Mesh-Evaluation

./: README.md  pyproject.toml
client_scripts/: measurement.sh
evaluation/: config.py  config_mesh.py  evaluate_dual_mesh_wlan_connection.ipynb  evaluate_single_AP_connection.ipynb
processing/: __main__.py
results/bandwithtest_04062024_roofmounted-inside/: results_14-11-16.csv  results_14-15-21.csv  results_14-17-27.csv  results_14-20-14.csv  results_14-22-46.csv  results_14-30-41.csv
results/bandwithtest_05062024_outside/: 08-37-10.csv  08-40-06.csv  08-45-93.csv  08-49-07.csv  08-51-45.csv
results/bandwithtest_06052024_roofmounted-inside/: results_15-45-37.csv  results_15-47-41.csv  results_15-57-52.csv  results_15-58-54.csv  results_15-59-56.csv
results/mesh/bandwithtest_09072024_mesh_wlan-a/: 12-11-35.csv  12-13-34.csv  12-14-58.csv  12-16-49.csv  12-18-48.csv
results/mesh/bandwithtest_09072924_mesh_wlan-b/: 13-34-50.csv  13-36-25.csv  13-37-39.csv  13-39-03.csv  13-40-44.csv  13-41-51.csv  13-43-41.csv
